Browser-Anmeldung durch sicheren BFF ersetzen
